# willos-graveyard

./: .gitignore  Cargo.toml  bevy_game.js  index.html  styles.css  willos-graveyard-10333be1eb8ab45b.js  willos-graveyard-1762e89d68aa519e.js  willos-graveyard-188799e7a2de34fe.js  willos-graveyard-1dda3f384797cccb.js  willos-graveyard-226bbc2ffb2c0738.js  willos-graveyard-24fe27723495566a.js  willos-graveyard-25a634076b82b8f1.js  willos-graveyard-27568c3f42defd5.js  willos-graveyard-2d1dcf090c642d10.js  willos-graveyard-30ab9a0902062c01.js  willos-graveyard-33888fc6199efff2.js  willos-graveyard-396b7d0c7892849e.js  willos-graveyard-3a81d5e5784c9917.js  willos-graveyard-40c73da736e02535.js  willos-graveyard-41df6759a7b56ab6.js  willos-graveyard-43568ff88cbaff77.js  willos-graveyard-44d3ec084342f0315a2a2bda96f939f59f55ba04b45d55d6eea42066aae4a0bb8abd225717913aedcea9130e42682987.js  willos-graveyard-44ee60fe93ebfa74.js  willos-graveyard-455f1e64352e4c7f.js  willos-graveyard-45e09826954228a4433db2cf2afb6b065ea6da0e3aa373576bd3d027bc209f53615aa7792a57dd31cb3607e21309320a.js  willos-graveyard-465948e40e56c1d8abedda87bf0265ab1f1ae2db3bf44fff8236d1f6b4a5d89432a43b029c58fda0aefd5a448b91641f.js  willos-graveyard-49b48a6c07abc66f.js  willos-graveyard-4ec9d9c35f973c60.js  willos-graveyard-5503af433c4b1cf6.js  willos-graveyard-55f18b8a5156dfce.js  willos-graveyard-5c1d197b78c7e285.js  willos-graveyard-5fb2e5463b9502cb.js  willos-graveyard-693846d227d93db9.js  willos-graveyard-69bcd79b5948855d.js  willos-graveyard-6d1e365f59b50649.js  willos-graveyard-733ae99b1204fb1c.js  willos-graveyard-7796375644e86e49.js  willos-graveyard-7b01562cf32b5f61.js  willos-graveyard-8299646290f5f85f.js  willos-graveyard-839c6e9d58eb1bdb.js  (+33 more)
.cargo/: config.toml
.github/workflows/: lint.yaml  release.yaml  version.yaml
assets/levels/: claustrophobic.txt  flip-the-table.txt  getting-used-to.txt  hello.txt  key.txt  levels.ldtk  set-the-table.txt  sokoban-sokoban.ldtk  stuck.txt  who-put-this.txt  willos-graveyard.ldtk
assets/textures/: arrow-blocks-sheet.aseprite  graves-Sheet.ase
design/docs/: abstractions.md  algebra.md  concept-reinforcement-analysis.ods
design/graph/: movement-diagrams.aseprite  utility-graph-bidirectional-components.graphml  utility-graph-no-dashes.graphml  utility-graph-single-share-axis-aligned.graphml  utility-graph-single-share-directions.graphml  utility-graph-single-share-hexagon.graphml  utility-graph-single-share.graphml  utility-graph.graphml
design/playtest/: jesse-playtest-2024-01-13.md  jessie-playtest-2024-04-14.md  jesus-playtest-2022-09-03.md  jesus-playtest-2023-11-26.md  johnny-playtest-2022-03-04.md  johnny-playtest-2022-05-13.md  lyra-playtest-2022-05-08.md  lyra-playtest-2024-04-20.md  russel-playtest-2023-12-10.md
settings/: gravestone_controls.json  graveyard_controls.json  willo_input_map.json
src/: animation.rs  bundles.rs  button.rs  camera.rs  control_display.rs  event_scheduler.rs  exorcism.rs  from_component.rs  goal.rs  goal_ghost.rs  gravestone.rs  history.rs  level_select.rs  level_transition.rs  main.rs  movement_display.rs  movement_table.rs  nine_slice.rs  previous_component.rs  resources.rs  sokoban.rs  sugar.rs  ui_atlas_image.rs  utils.rs  willo.rs  wind.rs
src/gameplay/: bundles.rs  components.rs  mod.rs  systems.rs  transitions.rs
src/graveyard/: arrow_block.rs  control_display.rs  exorcism.rs  goal.rs  gravestone.rs  gravestone_movement_queries.rs  layer.rs  mod.rs  movement_table.rs  out_of_bounds.rs  sokoban.rs  (+4 more)
(+180 files in other folders)
