[package]
name = "willos-graveyard"
version = "0.9.6"
authors = ["TLovell <trevorlovelldesign@gmail.com>"]
edition = "2021"

[features]
# For release builds, make sure to use --no-default-features
default = ["hot", "fast-compile"]
dev = ["inspector"]

hot = ["bevy/file_watcher"]
fast-compile = ["bevy/dynamic_linking"]
inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.12", features = ["wav"] }
bevy_easings = "0.12"
bevy_ecs_ldtk = { version = "0.8", default-features = false, features = ["derive", "render", "external_levels"] }
bevy_ecs_tilemap = "0.12"
rand = "0.8"
serde = "1"
serde_json = "1"
bevy_asset_loader = { version = "0.19", features = ["2d"] }
bevy-inspector-egui = { version = "0.22", optional = true }
thiserror = "1"
leafwing-input-manager = "0.11"

[target.wasm32-unknown-unknown.dependencies]
bevy_ecs_ldtk = { version = "0.8", default-features = false, features = ["derive", "render", "external_levels", "atlas"] }

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch = "main" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
