[package]
name = "willos-graveyard"
version = "0.11.4"
authors = ["TLovell <trevorlovelldesign@gmail.com>"]
edition = "2021"

[features]
# For release builds, make sure to use --no-default-features
default = ["hot", "fast-compile"]
dev = ["inspector"]

hot = ["bevy/file_watcher"]
fast-compile = ["bevy/dynamic_linking"]
inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.16.1", features = ["wav"] }
bevy_easings = "0.16.0"
bevy_ecs_ldtk = { version = "0.12.0", default-features = false, features = ["derive", "render", "external_levels"] }
bevy_ecs_tilemap = "0.16.0"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy-inspector-egui = { version = "0.31.0", optional = true }
rand = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1"
leafwing-input-manager = "0.17.0"
itertools = "0.12.1"

[target.wasm32-unknown-unknown.dependencies]
bevy_ecs_ldtk = { version = "0.12.0", default-features = false, features = ["derive", "render", "external_levels", "atlas"] }
